[package]
name = "slam-cv"
version = "0.1.0"
authors = ["h <besqer996@gnu.ac.kr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde"]

podo = ["podo-core-driver"]

[dependencies]
crossbeam = "0.7"
image = "0.23"
nalgebra = "0.21"
num = "0.2"
podo-core-driver = { version = "0.3", optional = true }
serde = { version = "1", optional = true }
simba = "0.1"
